--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "soten",
   "version": "0.1.0",
   "private": true,
+  "license": "GPL-3.0-only",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
