--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "style": "prettier --check .",
+    "types": "tsc --noEmit"
   },
   "dependencies": {
     "next": "15.1.6",
@@ -22,6 +24,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "wrangler": "^3.107.2"
