--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tool: [lint, types, style]
+        tool: [lint, types, style, build]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
