--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,13 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    groups:
+      development:
+        patterns:
+          - "devDependencies"
+      production:
+        patterns:
+          - "dependencies"
   - package-ecosystem: "github-actions"
     directory: ".github/"
     schedule:
