--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,13 +10,15 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      versions:
-        applies-to: version-updates
+      security:
+        applies-to: security-updates
+      production-minor:
+        dependency-type: production
         update-types:
           - "minor"
           - "patch"
-      security:
-        applies-to: security-updates
+      development-minor:
+        dependency-type: development
         update-types:
           - "patch"
           - "minor"
