--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,9 @@ updates:
     groups:
       security:
         applies-to: security-updates
+        update-types:
+          - "minor"
+          - "patch"
       production-minor:
         dependency-type: production
         update-types:
