--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "types": "tsc --noEmit"
   },
   "dependencies": {
+    "@isomorphic-git/lightning-fs": "^4.6.0",
+    "buffer": "^6.0.3",
+    "isomorphic-git": "^1.29.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
