--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.7",
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.22.0",
     "@types/node": "^22",
