--- a/package.json
+++ b/package.json
@@ -3,31 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "license": "GPL-3.0-only",
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint .",
     "style": "prettier --check .",
     "types": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "15.2.3",
+    "@isomorphic-git/lightning-fs": "^4.6.0",
+    "@tailwindcss/vite": "^4.0.14",
+    "@total-typescript/ts-reset": "^0.6.1",
+    "buffer": "^6.0.3",
+    "isomorphic-git": "^1.29.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.7",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.14",
+    "@eslint/js": "^9.22.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.14",
     "typescript": "^5",
-    "wrangler": "^4.1.0"
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.2.2"
   }
 }
