--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "GPL-3.0-only",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
+    "dev:proxy": "wrangler pages dev ./dist",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
@@ -31,12 +32,14 @@
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.37.4",
+    "express": "^4.21.2",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.14",
     "typescript": "^5",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.2.2"
+    "vite": "^6.2.2",
+    "wrangler": "^4.2.0"
   }
 }
