--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "dev:proxy": "wrangler pages dev ./dist --compatibility-date 2025-03-17",
+    "dev:proxy": "wrangler pages dev ./dist",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
